feat(AccountDAOImpl): optimize account retrieval methods and improve findAll and isAccountExists implementations